refactor and fix issues